Adding in license checking along with commercial api endpoints
