# docs/opensource/opensource_swagger.json
@@ -38,7 +38,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/omnitruck_client.PlatformList"
+                            "$ref": "#/definitions/omnitruck.PlatformList"
                         }
                     },
                     "500": {
@@ -53,6 +53,14 @@
         "/products": {
             "get": {
                 "description": "Returns a valid list of valid product keys.\nAny of these product keys can be used in the \u003cPRODUCT\u003e value of other endpoints. Please note many of these products are used for internal tools only and many have been EOL’d.",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "EOL Products",
+                        "name": "eol",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -231,7 +239,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/omnitruck_client.PackageMetadata"
+                            "$ref": "#/definitions/omnitruck.PackageMetadata"
                         }
                     },
                     "400": {
@@ -296,7 +304,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/omnitruck_client.PackageList"
+                            "$ref": "#/definitions/omnitruck.PackageList"
                         }
                     },
                     "400": {
@@ -434,19 +442,19 @@
         }
     },
     "definitions": {
-        "omnitruck_client.ArchList": {
+        "omnitruck.ArchList": {
             "type": "object",
             "additionalProperties": {
-                "$ref": "#/definitions/omnitruck_client.PackageMetadata"
+                "$ref": "#/definitions/omnitruck.PackageMetadata"
             }
         },
-        "omnitruck_client.PackageList": {
+        "omnitruck.PackageList": {
             "type": "object",
             "additionalProperties": {
-                "$ref": "#/definitions/omnitruck_client.PlatformVersionList"
+                "$ref": "#/definitions/omnitruck.PlatformVersionList"
             }
         },
-        "omnitruck_client.PackageMetadata": {
+        "omnitruck.PackageMetadata": {
             "type": "object",
             "properties": {
                 "sha1": {
@@ -463,16 +471,16 @@
                 }
             }
         },
-        "omnitruck_client.PlatformList": {
+        "omnitruck.PlatformList": {
             "type": "object",
             "additionalProperties": {
                 "type": "string"
             }
         },
-        "omnitruck_client.PlatformVersionList": {
+        "omnitruck.PlatformVersionList": {
             "type": "object",
             "additionalProperties": {
-                "$ref": "#/definitions/omnitruck_client.ArchList"
+                "$ref": "#/definitions/omnitruck.ArchList"
             }
         },
         "services.ErrorResponse": {
